--- a/details.html
+++ b/details.html
@@ -62,7 +62,7 @@
 
             <div class="wrapper__section">
                 <span><a href="">&lt;</a></span>
-                <a href="./contact.html">
+                <a href="">
                     <h2>Details</h2>
                 </a>
                 <span><a href="">&gt;</a></span>
