--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -85,7 +85,8 @@
             </div>
 
             <div class="right-section">
-                <input type="text">
+                <label for="search-input">Search</label>
+                <input type="text" id="search-input">
                 <img src="./assets/img/magnifying-glass-solid.svg" alt="search">
             </div>
 
@@ -206,6 +207,8 @@
         </div>
     </div>
     <!-- End Modals -->
+
+    <script src="./assets/js/data.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
