--- a/past_events.html
+++ b/past_events.html
@@ -87,9 +87,9 @@
             </div>
 
             <!--Start Cards-->
-            <div class="cards-container">
+            <div id="cards_container" class="cards-container">
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="./assets/img/Cinema.jpg" alt="imagen">
                     <h3>Título</h3>
                     <p>Texto Descriptivo</p>
@@ -97,57 +97,7 @@
                         <div>Price:$1000</div>
                         <button data-bs-toggle="modal" data-bs-target="#mi-modal">Details</button>
                     </div>
-                </div>
-
-                <div class="card">
-                    <img src="./assets/img/Costume_Party.jpg" alt="imagen">
-                    <h3>Título</h3>
-                    <p>Texto Descriptivo</p>
-                    <div class="details">
-                        <div>Price:$1000</div>
-                        <button data-bs-toggle="modal" data-bs-target="#mi-modal">Details</button>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="./assets/img/Food_Fair.jpg" alt="imagen">
-                    <h3>Título</h3>
-                    <p>Texto Descriptivo</p>
-                    <div class="details">
-                        <div>Price:$1000</div>
-                        <button data-bs-toggle="modal" data-bs-target="#mi-modal">Details</button>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="./assets/img/Marathon.jpg" alt="imagen">
-                    <h3>Título</h3>
-                    <p>Texto Descriptivo</p>
-                    <div class="details">
-                        <div>Price:$1000</div>
-                        <button data-bs-toggle="modal" data-bs-target="#mi-modal">Details</button>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="imagen">
-                    <h3>Título</h3>
-                    <p>Texto Descriptivo</p>
-                    <div class="details">
-                        <div>Price:$1000</div>
-                        <button data-bs-toggle="modal" data-bs-target="#mi-modal">Details</button>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="./assets/img/Music_Concert.jpg" alt="imagen">
-                    <h3>Título</h3>
-                    <p>Texto Descriptivo</p>
-                    <div class="details">
-                        <div>Price:$1000</div>
-                        <button data-bs-toggle="modal" data-bs-target="#mi-modal">Details</button>
-                    </div>
-                </div>
+                </div> -->
 
             </div> <!--End Cards-->
         </div> <!-- End Container-->
@@ -202,6 +152,7 @@
     <!-- End Modals -->
 
     <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/past.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
