--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -71,8 +71,8 @@
         <!-- Start Main -->
         <div class="container">
 
-            <div class="left-section">
-                <input type="checkbox" id="checkbox1">
+            <div id="left_section" class="left-section">
+                <!-- <input type="checkbox" id="checkbox1">
                 <label for="checkbox1">Category</label>
                 <input type="checkbox" id="checkbox2">
                 <label for="checkbox2">Category</label>
@@ -81,7 +81,7 @@
                 <input type="checkbox" id="checkbox4">
                 <label for="checkbox4">Category</label>
                 <input type="checkbox" id="checkbox5">
-                <label for="checkbox5">Category</label>
+                <label for="checkbox5">Category</label> -->
             </div>
 
             <div class="right-section">
@@ -104,6 +104,8 @@
                 </div> -->
 
             </div> <!-- End Cards-->
+
+            <div id="no-results-message">No se encontraron resultados</div>
 
         </div> <!-- End Container -->
 
