--- a/details.html
+++ b/details.html
@@ -70,32 +70,27 @@
 
         </section>
 
-        <div class="container">
+        <div class="container"> <!-- Start Container -->
 
-                <!-- Content modal -->
+            <div class="modal__event align-middle">
 
-                <div class="modal__event align-middle">
+                <img class="modal__event__img img-fluid" src="./assets/img/notfound.jpeg" alt="event">
 
-                    <img class="modal__event__img img-fluid" src="./assets/img/Museum_Tour.jpg" alt="event">
-
-                    <div class="modal__event__info">
-                        <h3>AMAZING EVENTS</h3>
-                        <p>NAME</p>
-                        <p>DATE</p>
-                        <p>DESCRIPTION</p>
-                        <p>CATEGORY</p>
-                        <p>PLACE</p>
-                        <p>CAPACITY</p>
-                        <p>ASSISTANCE OR ESTIMATE</p>
-                        <p>PRICE</p>
-                    </div>
-
+                <div class="modal__event__info">
+                    <h3>AMAZING EVENTS</h3>
+                    <p>NAME</p>
+                    <p>DATE</p>
+                    <p>DESCRIPTION</p>
+                    <p>CATEGORY</p>
+                    <p>PLACE</p>
+                    <p>CAPACITY</p>
+                    <p>ASSISTANCE OR ESTIMATE</p>
+                    <p>PRICE</p>
                 </div>
 
+            </div>
 
-            <!-- End Content modal -->
-            
-        </div>
+        </div>                  <!-- End Container -->
 
     </main>
     <!-- End Main -->
@@ -117,6 +112,7 @@
     <!-- End Footer -->
 
     <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/details.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
