--- a/past_events.html
+++ b/past_events.html
@@ -67,8 +67,8 @@
 
         <div class="container"> <!-- Start Container-->
 
-            <div class="left-section">
-                <input type="checkbox" id="checkbox1">
+            <div id="left_section" class="left-section">
+                <!-- <input type="checkbox" id="checkbox1">
                 <label for="checkbox1">Category</label>
                 <input type="checkbox" id="checkbox2">
                 <label for="checkbox2">Category</label>
@@ -77,7 +77,7 @@
                 <input type="checkbox" id="checkbox4">
                 <label for="checkbox4">Category</label>
                 <input type="checkbox" id="checkbox5">
-                <label for="checkbox5">Category</label>
+                <label for="checkbox5">Category</label> -->
             </div>
 
             <div class="right-section">
@@ -100,6 +100,9 @@
                 </div> -->
 
             </div> <!--End Cards-->
+
+            <div id="no-results-message">No se encontraron resultados</div>
+
         </div> <!-- End Container-->
     </main> <!--End Main-->
 
