--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+
+    <div id="progressbar"></div>
+    <div id="scrollPath"></div>
+
     <!-- Start Header -->
     <header>
 
@@ -75,17 +79,17 @@
                 <form action="./assets/data/show_data.html" method="GET">
                     <div>
                         <label for="name">Name:</label><br>
-                        <input required type="text" id="name" name="name">
+                        <input placeholder="Jonh Doe" required type="text" id="name" name="name">
                     </div>
                     <div>
                         <label for="email">Email:</label><br>
-                        <input required type="email" id="email" name="email">
+                        <input placeholder="myemail@email.com" required type="email" id="email" name="email">
                     </div>
                     <div>
                         <label for="message">Message:</label><br>
-                        <textarea id="message" name="message"></textarea>
+                        <textarea placeholder="Hello from Mindhub Argentina!" id="message" name="message"></textarea>
                     </div>
-                    <button type="submit">Submit</button>
+                    <button id="btnContact" type="submit">Submit</button>
                 </form>
             </div>
         </div>
@@ -97,9 +101,9 @@
     <footer>
 
         <div class="left-footer">
-            <a href="https://www.instagram.com/"><img src="./assets/img/square-instagram.svg" alt="icono_instagram"></a>
-            <a href="https://www.facebook.com/"><img src="./assets/img/facebook.svg" alt="icono_facebook"></a>
-            <a href="https://www.whatsapp.com/"><img src="./assets/img/square-whatsapp.svg" alt="icono_whatsapp"></a>
+            <a target="blank" class="icon" href="https://www.instagram.com/"><img src="./assets/img/instagram.svg" alt="icono_instagram"></a>
+            <a target="blank" href="https://www.facebook.com/"><img src="./assets/img/facebook.svg" alt="icono_facebook"></a>
+            <a target="blank" href="https://www.whatsapp.com/"><img src="./assets/img/whatsapp.svg" alt="icono_whatsapp"></a>
         </div>
 
         <div class="right-footer">
@@ -108,6 +112,8 @@
 
     </footer>
     <!-- End Footer -->
+
+    <script src="./assets/js/contact.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
