--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <body>
 
+    <div id="progressbar"></div>
+    <div id="scrollPath"></div>
+
     <header>  <!-- Start Header -->
 
         <!-- Start Navbar -->
@@ -23,7 +26,7 @@
                     <img src="./assets/img/Logo_Amazing_Events.png" alt="LOGO" width="130">
                 </a>
 
-                <button class="navbar-toggler btn-custom navbar-toggler-dark" type="button" data-bs-toggle="collapse"
+                <button id="navBurger" class="navbar-toggler btn-custom navbar-toggler-dark" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -94,7 +97,13 @@
 
             </div>
             <!--End Cards-->
-            <div id="no-results-message">No se encontraron resultados</div>
+
+            <div id="no-results-message">No results found</div>
+
+            <div class="loader">
+                <img src="./assets/img/blocks_loader.svg" alt="">
+            </div>
+
         </div>                  <!-- End Container -->
 
     </main> <!--End Main-->
@@ -102,9 +111,9 @@
     <footer>  <!--Start Footer-->
 
         <div class="left-footer">
-            <a href="https://www.instagram.com/"><img src="./assets/img/square-instagram.svg" alt="icono_instagram"></a>
-            <a href="https://www.facebook.com/"><img src="./assets/img/facebook.svg" alt="icono_facebook"></a>
-            <a href="https://www.whatsapp.com/"><img src="./assets/img/square-whatsapp.svg" alt="icono_whatsapp"></a>
+            <a target="blank" class="icon" href="https://www.instagram.com/"><img src="./assets/img/instagram.svg" alt="icono_instagram"></a>
+            <a target="blank" href="https://www.facebook.com/"><img src="./assets/img/facebook.svg" alt="icono_facebook"></a>
+            <a target="blank" href="https://www.whatsapp.com/"><img src="./assets/img/whatsapp.svg" alt="icono_whatsapp"></a>
         </div>
 
         <div class="right-footer">
@@ -112,49 +121,7 @@
         </div>
     </footer> <!--End Footer-->
 
-    <!-- BORRAR ESTO Start Modals -->
-
-    <!-- Start Modals -->
-    <div class="modal fade" id="mi-modal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-fullscreen-sm-down">
-            <div class="modal-content">
-
-                <div class="modal-body">
-                    <!-- Content modal -->
-
-                    <div class="modal__event align-middle">
-
-                        <img class="modal__event__img" src="./assets/img/Museum_Tour.jpg" alt="event">
-
-                        <div class="modal__event__info">
-                            <h3>AMAZING EVENTS</h3>
-                            <p>NAME</p>
-                            <p>DATE</p>
-                            <p>DESCRIPTION</p>
-                            <p>CATEGORY</p>
-                            <p>PLACE</p>
-                            <p>CAPACITY</p>
-                            <p>ASSISTANCE OR ESTIMATE</p>
-                            <p>PRICE</p>
-                        </div>
-
-                    </div>
-
-                </div>
-                <!-- End Content modal -->
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">X</button>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- End Modals -->
-
-    <script src="./assets/js/data.js"></script>
     <script src="./assets/js/home.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
