--- a/past_events.html
+++ b/past_events.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+
+    <div id="progressbar"></div>
+    <div id="scrollPath"></div>
+
     <!-- Start Header -->
     <header>
 
@@ -101,7 +105,11 @@
 
             </div> <!--End Cards-->
 
-            <div id="no-results-message">No se encontraron resultados</div>
+            <div id="no-results-message">No results found</div>
+
+            <div class="loader">
+                <img src="./assets/img/blocks_loader.svg" alt="">
+            </div>
 
         </div> <!-- End Container-->
     </main> <!--End Main-->
@@ -109,9 +117,9 @@
     <footer> <!--Start Footer-->
 
         <div class="left-footer">
-            <a href="https://www.instagram.com/"><img src="./assets/img/square-instagram.svg" alt="icono_instagram"></a>
-            <a href="https://www.facebook.com/"><img src="./assets/img/facebook.svg" alt="icono_facebook"></a>
-            <a href="https://www.whatsapp.com/"><img src="./assets/img/square-whatsapp.svg" alt="icono_whatsapp"></a>
+            <a target="blank" class="icon" href="https://www.instagram.com/"><img src="./assets/img/instagram.svg" alt="icono_instagram"></a>
+            <a target="blank" href="https://www.facebook.com/"><img src="./assets/img/facebook.svg" alt="icono_facebook"></a>
+            <a target="blank" href="https://www.whatsapp.com/"><img src="./assets/img/whatsapp.svg" alt="icono_whatsapp"></a>
         </div>
 
         <div class="right-footer">
@@ -154,7 +162,7 @@
     </div>
     <!-- End Modals -->
 
-    <script src="./assets/js/data.js"></script>
+    <!-- <script src="./assets/js/data2.js"></script> -->
     <script src="./assets/js/past.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
