--- a/stats.html
+++ b/stats.html
@@ -13,6 +13,10 @@
   </head>
 
   <body>
+
+    <div id="progressbar"></div>
+    <div id="scrollPath"></div>
+
     <!-- Start Header -->
     <header>
 
@@ -71,11 +75,11 @@
         </div>
       </section>
 
-      <div class="container"> <!-- Start Container-->
+      <div id="mainTables" class="container"> <!-- Start Container-->
 
 
         <!-- Start Tables-->
-        <table class="table table-success table-striped">
+        <table id="miTabla" class="table table-success table-striped">
 
           <thead>
             <tr>
@@ -98,7 +102,7 @@
           </tbody>
         </table>
 
-        <table class="table table-success table-striped">
+        <table id="miTabla2" class="table table-success table-striped">
 
           <thead>
             <tr>
@@ -113,27 +117,10 @@
               <td class="table__subtitles align-middle">Percentage of attendance</td>
             </tr>
 
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
           </tbody>
         </table>
 
-        <table class="table table-success table-striped">
+        <table id="miTabla3" class="table table-success table-striped">
 
           <thead>
             <tr>
@@ -147,50 +134,23 @@
               <td class="table__subtitles align-middle">Revenues</td>
               <td class="table__subtitles align-middle">Percentage of attendance</td>
             </tr>
-
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
           </tbody>
         </table>
         <!-- End Tables-->
 
       </div> <!-- End Container -->
+            <div class="loaderStats">
+                <img src="./assets/img/loader.svg" alt="">
+            </div>
     </main> <!-- End Main -->
 
     <!-- Start Footer -->
     <footer>
 
       <div class="left-footer">
-        <a href="https://www.instagram.com/"><img src="./assets/img/square-instagram.svg" alt="icono_instagram"></a>
-        <a href="https://www.facebook.com/"><img src="./assets/img/facebook.svg" alt="icono_facebook"></a>
-        <a href="https://www.whatsapp.com/"><img src="./assets/img/square-whatsapp.svg" alt="icono_whatsapp"></a>
+        <a target="blank" class="icon" href="https://www.instagram.com/"><img src="./assets/img/instagram.svg" alt="icono_instagram"></a>
+        <a target="blank" href="https://www.facebook.com/"><img src="./assets/img/facebook.svg" alt="icono_facebook"></a>
+        <a target="blank" href="https://www.whatsapp.com/"><img src="./assets/img/whatsapp.svg" alt="icono_whatsapp"></a>
       </div>
 
       <div class="right-footer">
@@ -199,7 +159,8 @@
     </footer>
     <!-- End Footer -->
 
-    <script src="./assets/js/data.js"></script>
+    <!-- <script src="./assets/js/data2.js"></script> -->
+    <script src="./assets/js/stats.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
